Paso de datos de componente padre Dashboard a elementos hijos

--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -36,7 +36,7 @@
     </div>
 </nav>
 <div class="container">
-    <app-perfil></app-perfil>
-    <app-campeones></app-campeones>
-    <app-partidas></app-partidas>
+    <app-perfil [user]="user"></app-perfil>
+    <app-campeones [user]="user"></app-campeones>
+    <app-partidas [user]="user"></app-partidas>
 </div>
