--- a/src/app/dashboard/partidas/partidas.component.html
+++ b/src/app/dashboard/partidas/partidas.component.html
@@ -1,11 +1,7 @@
 
-    <div class="row text-center text-white mb-5">
-        <div class="col-lg-7 mx-auto">
-            <h1 class="display-4">Matches</h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-10 mx-auto">
+
+  
+        <div class="col-lg-10 mx-auto " style="margin-top: 150px;">
             <!-- List group-->
             <ul class="list-group shadow">
                 <!-- list group item-->
@@ -66,5 +62,5 @@
                 </li> <!-- End -->
             </ul> <!-- End -->
         </div>
-    </div>
+
 
