--- a/src/app/dashboard/perfil/perfil.component.html
+++ b/src/app/dashboard/perfil/perfil.component.html
@@ -1,10 +1,10 @@
 
 
-    <div class="col-md-4 ">
-        <div id="profile">
+    <div class="col-md-4 " >
+        <div id="profile" style="padding-top: 20px;">
             <div class="card profile-card-3">
                 <div class="background-block">
-                    <img src="https://bolavip.com/__export/1568168033768/sites/bolavip/img/2019/09/10/54c5bb06de5a9cb2667ee73e37a08175e994ccc3r1-1215-683v2_hq_crop1568168033332.jpg_1693159006.jpg"
+                    <img src="http://ddragon.leagueoflegends.com/cdn/img/champion/splash/{{user.champions[0].championName}}_0.jpg"
                         alt="profile-sample1" class="background" />
                 </div>
                 <div class="profile-thumb-block">
