--- a/src/app/principal/principal.component.css
+++ b/src/app/principal/principal.component.css
@@ -462,7 +462,7 @@ html {
     -ms-flex-align: center;
         align-items: center;
     font-family: 'Poppins', sans-serif;
-    background: url("../../assets/img/background_principal.jpg");
+    background: url("../../assets/img/senna.jpg");
     background-size: cover;
     background-position: center center;
     padding: 15px;
