--- a/src/app/dashboard/campeones/campeones.component.css
+++ b/src/app/dashboard/campeones/campeones.component.css
@@ -1,58 +1,32 @@
-img{
-    height:150px;
-    width:100%;
-  }
+.profile-card-5{
+  margin-top:20px;
+}
+.profile-card-5 .btn{
+  border-radius:2px;
+  text-transform:uppercase;
+  font-size:12px;
+  padding:7px 20px;
+}
+.profile-card-5 .card-img-block {
+  width: 91%;
+  margin: 0 auto;
+  position: relative;
+  top: -20px;
   
-  div [class^="col-"]{
-    padding-left:5px;
-    padding-right:5px;
-  }
-  .card{
-    transition:0.5s;
-    cursor:pointer;
-  }
-  .card-title{  
-    font-size:15px;
-    transition:1s;
-    cursor:pointer;
-  }
-  .card-title i{  
-    font-size:15px;
-    transition:1s;
-    cursor:pointer;
-    color:#ffa710
-  }
-  .card-title i:hover{
-    transform: scale(1.25) rotate(100deg); 
-    color:#18d4ca;
-    
-  }
-  .card:hover{
-    transform: scale(1.05);
-    box-shadow: 10px 10px 15px rgba(0,0,0,0.3);
-  }
-  .card-text{
-    height:80px;  
-  }
-  
-  .card::before, .card::after {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    transform: scale3d(0, 0, 1);
-    transition: transform .3s ease-out 0s;
-    background: rgba(255, 255, 255, 0.1);
-    content: '';
-    pointer-events: none;
-  }
-  .card::before {
-    transform-origin: left top;
-  }
-  .card::after {
-    transform-origin: right bottom;
-  }
-  .card:hover::before, .card:hover::after, .card:focus::before, .card:focus::after {
-    transform: scale3d(1, 1, 1);
-  }
+}
+.profile-card-5 .card-img-block img{
+  border-radius:5px;
+  box-shadow:0 0 10px rgba(0,0,0,0.63);
+}
+.profile-card-5 h5{
+  color:#4E5E30;
+  font-weight:600;
+}
+.profile-card-5 p{
+  font-size:14px;
+  font-weight:300;
+}
+.profile-card-5 .btn-primary{
+  background-color:#4E5E30;
+  border-color:#4E5E30;
+}
