--- a/src/app/dashboard/nav-bar/nav-bar.component.html
+++ b/src/app/dashboard/nav-bar/nav-bar.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-light bg-light justify-content-between">
     <a class="navbar-brand"><img src="../../assets/img/logo.png" width="60px" height="60px" alt=""></a>
     <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"  
+      aria-label="Search" (click)="onTip()" >
+      <button class="btn btn-outline-success my-2 my-sm-0" (click)="onSearch()">Search</button>
     </form>
   </nav>
