--- a/src/app/dashboard/nav-bar/nav-bar.component.html
+++ b/src/app/dashboard/nav-bar/nav-bar.component.html
@@ -1,8 +1,10 @@
 <nav class="navbar navbar-light bg-light justify-content-between">
     <a class="navbar-brand"><img src="../../assets/img/logo.png" width="60px" height="60px" alt=""></a>
-    <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"  
+    <form class="form-inline" [formGroup]="form">
+      <div>
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" formControlName="nombre" 
       aria-label="Search" (click)="onTip()" >
       <button class="btn btn-outline-success my-2 my-sm-0" (click)="onSearch()">Search</button>
+    </div>
     </form>
   </nav>
